--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 
 html {
-  background-color: #f1f5f9;
-  font-family: sans-serif;
+  background-color: #e2e2d8;
+  font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
 }
 
 body {
@@ -23,7 +23,7 @@ h1 {
 }
 
 html.dark {
-  background-color: #0d0950;
+  background-color: #36363a;
   color: #fff;
 }
 
