--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,6 @@
 ---
-interface Props {
-  title: string;
-}
-
-const { title } = Astro.props;
+import Footer from "../components/Footer.astro";
+import Header from "../components/Header.astro";
 ---
 
 <!doctype html>
@@ -13,9 +10,12 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-    <title>{title}</title>
   </head>
   <body>
-    <slot />
+    <div class="relative min-h-screen">
+      <Header />
+      <slot />
+      <Footer />
+    </div>
   </body>
 </html>
