--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,6 +11,6 @@ import Social from "./Social.astro";
 </style>
 
 <footer>
-  <Social platform="github" username="withastro" />
-  <Social platform="linkedIn" username="astrodotbuild" />
+  <Social platform="github" username="maevus" />
+  <Social platform="linkedIn" username="/in/maeve-lynskey-56b296241/" />
 </footer>
