--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,18 +1,20 @@
 ---
+import Contact from "../components/Contact.astro";
+import Footer from "../components/Footer.astro";
 import Logos from "../components/Logos.astro";
 import Layout from "../layouts/Layout.astro";
 import "../styles/global.css";
 ---
 
 <Layout>
-  <main class="container mx-auto px-4 py-2 md:py-8">
+  <main class="container mx-auto px-4 md:py-8">
     <section
-      class="mb-2 flex flex-col-reverse items-center gap-y-4 gap-x-10 md:flex-row md:items-center"
+      class="mb-2 flex flex-col-reverse items-center gap-y-4 gap-x-10 md:flex-row md:items-center md:mb-16"
     >
       <div class="flex-1">
-        <h1 class="font-bold">Hello, <span>I'm Maeve 👋</span></h1>
+        <h2 class="font-bold">Hello, <span>I'm Maeve 👋</span></h2>
         <p>
-          Welcome to my portfolio. I'm a passionate developer focused on
+          Welcome to my digital nook. I'm a passionate developer focused on
           creating beautiful and functional web experiences. I bring ideas to
           life through clean code and thoughtful design.
         </p>
@@ -22,23 +24,22 @@ import "../styles/global.css";
         <img
           src="/src/assets/maeve.png"
           alt="Maeve"
-          class="max-h-60 rounded-2xl text-center greyscale"
+          class="max-h-60 rounded-full text-center greyscale"
         />
       </div>
     </section>
 
-    
     <section class="mb-16">
       <div class="flex flex-col">
         <div class="order-first md:order-last">
           <Logos class="py-8 md:py-24" />
         </div>
-        
-        <div class="order-last md:order-first">
-          <h2 class="text-3xl font-bold mb-8">What can I do?</h2>
+
+        <div class="mt-16 order-last md:order-first">
+          <h1 class="text-3xl font-bold mb-8">What can I do?</h1>
           <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
             <div
-              class="p-6 rounded-lg bg-white/5 backdrop-blur-sm border border-white/10 shadow-lg hover:shadow-xl transition-all duration-300"
+              class="p-6 rounded-lg bg-white/5 backdrop-blur-sm border border-white/10 shadow-lg hover:shadow-2xl transition-all duration-300 dark:hover:shadow-[0_0_15px_rgba(226,226,216,0.1)]"
             >
               <div class="mb-4">
                 <svg
@@ -56,16 +57,20 @@ import "../styles/global.css";
                   ></path>
                 </svg>
               </div>
-              <h3 class="text-xl font-bold mb-2">Web Application Development</h3>
-              <p class="text-gray-600 dark:text-gray-400 mb-4">
+              <h3 class="text-xl font-bold mb-2">
+                Web Application Development
+              </h3>
+              <p
+                class="text-[var(--accent-dark)] dark:text-[var(--accent-light)] mb-4"
+              >
                 Building responsive, scalable web applications using modern
-                frameworks and best practices. Focused on creating seamless user
-                experiences.
+                frameworks and best practices; over half a decade developing for
+                SME's and large corporations.
               </p>
             </div>
 
             <div
-              class="p-6 rounded-lg bg-white/5 backdrop-blur-sm border border-white/10 shadow-lg hover:shadow-xl transition-all duration-300"
+              class="p-6 rounded-lg bg-white/5 backdrop-blur-sm border border-white/10 shadow-lg hover:shadow-2xl transition-all duration-300 dark:hover:shadow-[0_0_15px_rgba(226,226,216,0.1)]"
             >
               <div class="mb-4">
                 <svg
@@ -84,14 +89,17 @@ import "../styles/global.css";
                 </svg>
               </div>
               <h3 class="text-xl font-bold mb-2">Mobile Development</h3>
-              <p class="text-gray-600 dark:text-gray-400 mb-4">
-                Creating native and cross-platform mobile applications that deliver
-                powerful functionality with intuitive interfaces.
+              <p
+                class="text-[var(--accent-dark)] dark:text-[var(--accent-light)] mb-4"
+              >
+                Creating cross-platform mobile applications that deliver
+                powerful functionality with intuitive interfaces using React
+                Native & Ionic.
               </p>
             </div>
 
             <div
-              class="p-6 rounded-lg bg-white/5 backdrop-blur-sm border border-white/10 shadow-lg hover:shadow-xl transition-all duration-300"
+              class="p-6 rounded-lg bg-white/5 backdrop-blur-sm border border-white/10 shadow-lg hover:shadow-2xl transition-all duration-300 dark:hover:shadow-[0_0_15px_rgba(226,226,216,0.1)]"
             >
               <div class="mb-4">
                 <svg
@@ -110,9 +118,12 @@ import "../styles/global.css";
                 </svg>
               </div>
               <h3 class="text-xl font-bold mb-2">Static Websites</h3>
-              <p class="text-gray-600 dark:text-gray-400 mb-4">
-                Developing fast, SEO-friendly static websites with modern tools like
-                Astro and Jamstack architecture for optimal performance.
+              <p
+                class="text-[var(--accent-dark)] dark:text-[var(--accent-light)] mb-4"
+              >
+                Developing fast, 100% customizable & SEO-friendly static
+                websites with Astro and Jamstack architecture for optimal
+                performance.
               </p>
             </div>
           </div>
@@ -121,77 +132,9 @@ import "../styles/global.css";
     </section>
 
     <section class="mb-16">
-      <h2 class="text-3xl font-bold mb-8">Let's work together</h2>
-      <div class="max-w-2xl mx-auto">
-        <form
-          class="space-y-6"
-          action="https://formspree.io/f/mjkyvpak"
-          method="POST"
-        >
-          <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-            <div>
-              <label for="name" class="block text-sm font-medium mb-2"
-                >Name</label
-              >
-              <input
-                type="text"
-                id="name"
-                name="name"
-                required
-                class="w-full px-4 py-2 rounded-lg bg-white/5 backdrop-blur-sm border border-white/10 focus:border-white/20 focus:outline-none focus:ring-2 focus:ring-white/10 transition-all duration-300"
-              />
-            </div>
-            <div>
-              <label for="email" class="block text-sm font-medium mb-2"
-                >Email</label
-              >
-              <input
-                type="email"
-                id="email"
-                name="email"
-                required
-                class="w-full px-4 py-2 rounded-lg bg-white/5 backdrop-blur-sm border border-white/10 focus:border-white/20 focus:outline-none focus:ring-2 focus:ring-white/10 transition-all duration-300"
-              />
-            </div>
-          </div>
-          <div>
-            <label for="subject" class="block text-sm font-medium mb-2"
-              >Subject</label
-            >
-            <input
-              type="text"
-              id="subject"
-              name="subject"
-              required
-              class="w-full px-4 py-2 rounded-lg bg-white/5 backdrop-blur-sm border border-white/10 focus:border-white/20 focus:outline-none focus:ring-2 focus:ring-white/10 transition-all duration-300"
-            />
-          </div>
-          <div>
-            <label for="message" class="block text-sm font-medium mb-2"
-              >Message</label
-            >
-            <textarea
-              id="message"
-              name="message"
-              rows="5"
-              required
-              class="w-full px-4 py-2 rounded-lg bg-white/5 backdrop-blur-sm border border-white/10 focus:border-white/20 focus:outline-none focus:ring-2 focus:ring-white/10 transition-all duration-300"
-            ></textarea>
-          </div>
-          <div class="flex justify-end">
-            <button
-              type="submit"
-              class="px-6 py-3 bg-white/10 hover:bg-white/20 backdrop-blur-sm rounded-lg font-medium transition-all duration-300 hover:shadow-lg"
-            >
-              Send Message
-            </button>
-          </div>
-        </form>
-      </div>
+      <Contact />
     </section>
 
-    <footer class="text-center text-gray-600 dark:text-gray-400">
-      <p>© 2025</p>
-    </footer>
+    <Footer />
   </main>
 </Layout>
