--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ import "../styles/global.css";
 
       <div class="relative flex justify-center">
         <img
-          src="/src/assets/maeve.png"
+          src="/maeve.png"
           alt="Maeve"
           class="max-h-60 rounded-full text-center greyscale"
         />
