--- a/src/components/TechWall.astro
+++ b/src/components/TechWall.astro
@@ -10,7 +10,7 @@ const { technologies, prettifiedTechnologies } = Astro.props;
         technologies.map((tech: string) => (
             <div class="flex items-center gap-2 group transition-all duration-300">
                 <img
-                    src={`src/assets/logos/${tech}.svg`}
+                    src={`/logos/${tech}.svg`}
                     alt={tech}
                     class="h-7 w-auto object-contain transition-transform group-hover:scale-110 opacity-60"
                     width="30"
