--- a/src/components/ThemeIcon.astro
+++ b/src/components/ThemeIcon.astro
@@ -3,8 +3,8 @@
 ---
 
 <button id="themeToggle">
-  <img src="/src/assets/sun.svg" class="sun" width="30px" />
-  <img src="/src/assets/moon.svg" class="moon" width="30px" />
+  <img src="/sun.svg" class="sun" width="30px" />
+  <img src="/moon.svg" class="moon" width="30px" />
 </button>
 
 <style>
